--- a/lang/pl.json
+++ b/lang/pl.json
@@ -136,7 +136,7 @@
     "SHEET.SL": "Poziom Sukcesu Splatania",
     "SHEET.CareerToolTip": "Zaznacz Profesję jako 'Aktualną' aby wypełnić to miejsce",
     "SHEET.CharAbbrev": "Stat.",
-    "SHEET.AdvAbbrev": "PP",
+    "SHEET.AdvAbbrev": "PR",
     "SHEET.BonusChar": "Bonus z zaznaczonego Atrybutu jest dodawany do Współczynnika przy obliczaniu Obrażeń",
     "SHEET.Offhand": "Druga ręka",
     "SHEET.NewExtendedTest": "Nowy Test Wydłużony",
@@ -295,7 +295,7 @@
     "Arms": "Ręce",
     "Legs": "Nogi",
     "Spell": "Zaklęcie",
-    "Total": "W sumie",
+    "Total": "Łącznie",
     "Carries": "Niesie",
     "Memorized": "Zapamiętane",
     "Initial": "Początkowe",
@@ -308,8 +308,8 @@
     "Run": "Bieg",
     "Fortune": "Szczęście",
     "Fate": "Przeznaczenie",
-    "Resolve": "Bohater",
-    "Resilience": "Determinacja",
+    "Resolve": "Determinacja",
+    "Resilience": "Bohater",
     "Career": "Profesja",
     "Careers": "Profesje",
     "Level": "Poziom",
